stacks/templates/vault-elb.yaml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: Vault ELB stack in {{ env }} environment
Resources:
  ELBSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Vault API ELB SG
      VpcId: {{ get_vpc_id(vpc_conn, vpc_name) }}
      SecurityGroupIngress:
{% for subnet in vault_access_subnets %}
        - IpProtocol: tcp
          CidrIp: {{ subnet }}
          FromPort: 443
          ToPort: 443
{%- endfor %}
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 8200
          ToPort: 8200
          DestinationSecurityGroupId: {{ get_stack_output(cf_conn, infra_stack_name, 'SecureDefaultSG') }}

  ELBSGToDefaultSGIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: {{ get_stack_output(cf_conn, infra_stack_name, 'SecureDefaultSG') }}
      IpProtocol: tcp
      SourceSecurityGroupId: {Ref: ELBSG}
      FromPort: 8200
      ToPort: 8200

  ELB:
    Type: AWS::ElasticLoadBalancing::LoadBalancer
    Properties:
      CrossZone: true
      Subnets:
        - {{ get_stack_output(cf_conn, infra_stack_name, 'SecureSubnet0') }}
        - {{ get_stack_output(cf_conn, infra_stack_name, 'SecureSubnet1') }}
        - {{ get_stack_output(cf_conn, infra_stack_name, 'SecureSubnet2') }}
      SecurityGroups:
        - {Ref: ELBSG}
      HealthCheck:
        Target: 'TCP:8200'
        HealthyThreshold: 2
        Interval: 30
        Timeout: 5
        UnhealthyThreshold: 2
      ConnectionDrainingPolicy:
        Enabled: true
        Timeout: 30
      Listeners:
      - LoadBalancerPort: 443
        Protocol: HTTPS
        InstancePort: 8200
        InstanceProtocol: HTTPS
        SSLCertificateId:
          'Fn::Join':
          - ''
          -
            - 'arn:aws:iam::'
            - Ref: AWS::AccountId
            - ':server-certificate/wildcard.notprod.homeoffice.gov.uk'
      Tags:
      - Key: Name
        Value: {{ env }}-vault-elb
      - Key: Env
        Value: {{ env }}
      - Key: Service
        Value: vault

  ELBDNS:
    Type: AWS::Route53::RecordSetGroup
    Properties:
      HostedZoneName: {{ dns_zone_name }}.
      RecordSets:
        - Name: vault-{{ env }}.{{ dns_zone_name }}
          Type: A
          AliasTarget:
            HostedZoneId:
              'Fn::GetAtt':
                - ELB
                - CanonicalHostedZoneNameID
            DNSName:
              'Fn::GetAtt':
                - ELB
                - CanonicalHostedZoneName
